end wp1a; corrections in docs and seen errors